--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <artifactId>storm</artifactId>
             <version>0.9.0-rc2</version>
             <!-- keep storm out of the jar-with-dependencies -->
-            <!--<scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>storm</groupId>
@@ -149,7 +149,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>tutorial.storm.trident.example.Skeleton</mainClass>
+                            <mainClass>tutorial.storm.trident.example.GlobalTop20Hashtags</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
